App/MconfigParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Mconfig.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class MconfigParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, STRING=9, 
		WS=10;
	public const int
		RULE_file = 0, RULE_record = 1, RULE_sourceSelector = 2, RULE_typeSelector = 3, 
		RULE_absPathSelector = 4, RULE_trendSelector = 5, RULE_transform = 6;
	public static readonly string[] ruleNames = {
		"file", "record", "sourceSelector", "typeSelector", "absPathSelector", 
		"trendSelector", "transform"
	};

	private static readonly string[] _LiteralNames = {
		null, "'type'", "'absPath'", "'re'", "'name'", "'unit'", "'convert'", 
		"'rename'", "'replace'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, "STRING", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Mconfig.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static MconfigParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MconfigParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MconfigParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(MconfigParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RecordContext[] record() {
			return GetRuleContexts<RecordContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RecordContext record(int i) {
			return GetRuleContext<RecordContext>(i);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMconfigVisitor<TResult> typedVisitor = visitor as IMconfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 17;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0 || _la==T__1) {
				{
				{
				State = 14;
				record();
				}
				}
				State = 19;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 20;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RecordContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SourceSelectorContext sourceSelector() {
			return GetRuleContext<SourceSelectorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TrendSelectorContext trendSelector() {
			return GetRuleContext<TrendSelectorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TransformContext transform() {
			return GetRuleContext<TransformContext>(0);
		}
		public RecordContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_record; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.EnterRecord(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.ExitRecord(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMconfigVisitor<TResult> typedVisitor = visitor as IMconfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRecord(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RecordContext record() {
		RecordContext _localctx = new RecordContext(Context, State);
		EnterRule(_localctx, 2, RULE_record);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 22;
			sourceSelector();
			State = 23;
			trendSelector();
			State = 24;
			transform();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SourceSelectorContext : ParserRuleContext {
		public SourceSelectorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sourceSelector; } }
	 
		public SourceSelectorContext() { }
		public virtual void CopyFrom(SourceSelectorContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class AbsPathSelectorInfoContext : SourceSelectorContext {
		[System.Diagnostics.DebuggerNonUserCode] public AbsPathSelectorContext absPathSelector() {
			return GetRuleContext<AbsPathSelectorContext>(0);
		}
		public AbsPathSelectorInfoContext(SourceSelectorContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.EnterAbsPathSelectorInfo(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.ExitAbsPathSelectorInfo(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMconfigVisitor<TResult> typedVisitor = visitor as IMconfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAbsPathSelectorInfo(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class TypeSelectorInfoContext : SourceSelectorContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeSelectorContext typeSelector() {
			return GetRuleContext<TypeSelectorContext>(0);
		}
		public TypeSelectorInfoContext(SourceSelectorContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.EnterTypeSelectorInfo(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.ExitTypeSelectorInfo(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMconfigVisitor<TResult> typedVisitor = visitor as IMconfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeSelectorInfo(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SourceSelectorContext sourceSelector() {
		SourceSelectorContext _localctx = new SourceSelectorContext(Context, State);
		EnterRule(_localctx, 4, RULE_sourceSelector);
		try {
			State = 28;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				_localctx = new TypeSelectorInfoContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 26;
				typeSelector();
				}
				break;
			case T__1:
				_localctx = new AbsPathSelectorInfoContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 27;
				absPathSelector();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeSelectorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(MconfigParser.STRING, 0); }
		public TypeSelectorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeSelector; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.EnterTypeSelector(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.ExitTypeSelector(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMconfigVisitor<TResult> typedVisitor = visitor as IMconfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeSelector(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeSelectorContext typeSelector() {
		TypeSelectorContext _localctx = new TypeSelectorContext(Context, State);
		EnterRule(_localctx, 6, RULE_typeSelector);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 30;
			Match(T__0);
			State = 31;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AbsPathSelectorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(MconfigParser.STRING, 0); }
		public AbsPathSelectorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_absPathSelector; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.EnterAbsPathSelector(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.ExitAbsPathSelector(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMconfigVisitor<TResult> typedVisitor = visitor as IMconfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAbsPathSelector(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AbsPathSelectorContext absPathSelector() {
		AbsPathSelectorContext _localctx = new AbsPathSelectorContext(Context, State);
		EnterRule(_localctx, 8, RULE_absPathSelector);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 33;
			Match(T__1);
			State = 34;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TrendSelectorContext : ParserRuleContext {
		public TrendSelectorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_trendSelector; } }
	 
		public TrendSelectorContext() { }
		public virtual void CopyFrom(TrendSelectorContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class RegexTrendSelectorContext : TrendSelectorContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(MconfigParser.STRING, 0); }
		public RegexTrendSelectorContext(TrendSelectorContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.EnterRegexTrendSelector(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.ExitRegexTrendSelector(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMconfigVisitor<TResult> typedVisitor = visitor as IMconfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRegexTrendSelector(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NameTrendSelectorContext : TrendSelectorContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(MconfigParser.STRING, 0); }
		public NameTrendSelectorContext(TrendSelectorContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.EnterNameTrendSelector(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.ExitNameTrendSelector(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMconfigVisitor<TResult> typedVisitor = visitor as IMconfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNameTrendSelector(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TrendSelectorContext trendSelector() {
		TrendSelectorContext _localctx = new TrendSelectorContext(Context, State);
		EnterRule(_localctx, 10, RULE_trendSelector);
		try {
			State = 40;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__2:
				_localctx = new RegexTrendSelectorContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 36;
				Match(T__2);
				State = 37;
				Match(STRING);
				}
				break;
			case T__3:
				_localctx = new NameTrendSelectorContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 38;
				Match(T__3);
				State = 39;
				Match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TransformContext : ParserRuleContext {
		public TransformContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_transform; } }
	 
		public TransformContext() { }
		public virtual void CopyFrom(TransformContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class RenameTransformContext : TransformContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] STRING() { return GetTokens(MconfigParser.STRING); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING(int i) {
			return GetToken(MconfigParser.STRING, i);
		}
		public RenameTransformContext(TransformContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.EnterRenameTransform(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.ExitRenameTransform(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMconfigVisitor<TResult> typedVisitor = visitor as IMconfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRenameTransform(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UnitTransformContext : TransformContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(MconfigParser.STRING, 0); }
		public UnitTransformContext(TransformContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.EnterUnitTransform(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.ExitUnitTransform(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMconfigVisitor<TResult> typedVisitor = visitor as IMconfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnitTransform(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ReplaceTransformContext : TransformContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] STRING() { return GetTokens(MconfigParser.STRING); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING(int i) {
			return GetToken(MconfigParser.STRING, i);
		}
		public ReplaceTransformContext(TransformContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.EnterReplaceTransform(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.ExitReplaceTransform(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMconfigVisitor<TResult> typedVisitor = visitor as IMconfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReplaceTransform(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ConvertTransformContext : TransformContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] STRING() { return GetTokens(MconfigParser.STRING); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING(int i) {
			return GetToken(MconfigParser.STRING, i);
		}
		public ConvertTransformContext(TransformContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.EnterConvertTransform(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMconfigListener typedListener = listener as IMconfigListener;
			if (typedListener != null) typedListener.ExitConvertTransform(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMconfigVisitor<TResult> typedVisitor = visitor as IMconfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConvertTransform(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TransformContext transform() {
		TransformContext _localctx = new TransformContext(Context, State);
		EnterRule(_localctx, 12, RULE_transform);
		try {
			State = 53;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__4:
				_localctx = new UnitTransformContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 42;
				Match(T__4);
				State = 43;
				Match(STRING);
				}
				break;
			case T__5:
				_localctx = new ConvertTransformContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 44;
				Match(T__5);
				State = 45;
				Match(STRING);
				State = 46;
				Match(STRING);
				}
				break;
			case T__6:
				_localctx = new RenameTransformContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 47;
				Match(T__6);
				State = 48;
				Match(STRING);
				State = 49;
				Match(STRING);
				}
				break;
			case T__7:
				_localctx = new ReplaceTransformContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 50;
				Match(T__7);
				State = 51;
				Match(STRING);
				State = 52;
				Match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
